kubernetes/gitlab/gitlab-runner.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-runner
  labels:
    app: gitlab-runner
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  selector:
    app: gitlab
    srv: runner

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-runner
  labels:
    app: gitlab
    srv: runner
spec:
  selector:
    matchLabels:
      app: gitlab
      srv: runner
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab
        srv: runner
    spec:
      serviceAccountName: gitlab-runner
      containers:
      - name: runner
        image: "gitlab/gitlab-runner:latest"
        imagePullPolicy: Always
        lifecycle:
          postStart:
            exec:
              command:
              - "/bin/bash"
              - "-c"
              - >
                export RUNNER_NAME="$( hostname )" ;
                gitlab-runner register \
                    --kubernetes-service-account gitlab-runner

          preStop:
            exec:
              command: ["gitlab-runner", "unregister"]
