kubernetes/gitlab/postgresql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  type: ClusterIP
  ports:
  - name: postgresql
    port: 5432
    targetPort: postgresql
  selector:
    app: gitlab
    srv: db

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
spec:
  selector:
    matchLabels:
      app: gitlab
      srv: db
  serviceName: postgresql
  template:
    metadata:
      labels:
        app: gitlab
        srv: db
    spec:
      containers:
      - name: postgresql
        image: "postgres:9.6.2"
        imagePullPolicy: IfNotPresent
        ports:
        - name: postgresql
          containerPort: 5432
        livenessProbe:
          exec:
            command: ["sh", "-c", "exec pg_isready --host $POD_IP"]
          initialDelaySeconds: 60
          timeoutSeconds: 5
          failureThreshold: 6
        readinessProbe:
          exec:
            command: ["sh", "-c", "exec pg_isready --host $POD_IP"]
          initialDelaySeconds: 5
          timeoutSeconds: 3
          periodSeconds: 5
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
        volumeMounts:
        - name: postgresql-vol-data
          mountPath: /var/lib/postgresql/data/pgdata
          subPath: postgresql-db
  volumeClaimTemplates:
  - metadata:
      name: postgresql-vol-data
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 8Gi
