kubernetes/gitlab/redis-master.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:
    app: gitlab
    srv: redis-master
spec:
  type: ClusterIP
  ports:
  - name: redis
    port: 6379
    targetPort: redis
  selector:
    app: gitlab
    srv: redis-master
---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: redis-master
spec:
  selector:
    matchLabels:
      app: gitlab
      srv: redis-master
  serviceName: redis-master
  template:
    metadata:
      labels:
        app: gitlab
        srv: redis-master
    spec:
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      containers:
      - name: redis
        image: "bitnami/redis:4.0.10"
        imagePullPolicy: IfNotPresent
        args: []
        ports:
        - name: redis
          containerPort: 6379
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
          exec:
            command: ["redis-cli", "ping"]
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 5
          exec:
            command: ["redis-cli", "ping"]
        volumeMounts:
        - name: redis-vol-data
          mountPath: /bitnami/redis/data
  volumeClaimTemplates:
    - metadata:
        name: redis-vol-data
        labels:
          app: gitlab
          srv: redis-master
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
  updateStrategy:
    type: OnDelete
