kubernetes/gitlab/redis-metrics.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-metrics
  labels:
    app: gitlab
    srv: redis-metrics
spec:
  type: ClusterIP
  ports:
  - name: metrics
    port: 9121
    targetPort: metrics
  selector:
    app: gitlab
    srv: redis-metrics
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-metrics
spec:
  selector:
    matchLabels:
      app: gitlab
      srv: redis-metrics
  template:
    metadata:
      labels:
        app: gitlab
        srv: redis-metrics
    spec:
      containers:
      - name: redis-metrics
        image: "oliver006/redis_exporter:v0.19.1"
        imagePullPolicy: IfNotPresent
        ports:
        - name: metrics
          containerPort: 9121
