kubernetes/gitlab/redis-slave.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  labels:
    app: gitlab
    srv: redis-slave
spec:
  type: ClusterIP
  ports:
  - name: redis
    port: 6379
    targetPort: redis
  selector:
    app: gitlab
    srv: redis-slave
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-slave
spec:
  selector:
    matchLabels:
      app: gitlab
      srv: redis-slave
  replicas: 3
  template:
    metadata:
      labels:
        app: gitlab
        srv: redis-slave
    spec:
      restartPolicy: Always
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      containers:
      - name: redis-slave
        image: "bitnami/redis:4.0.10"
        imagePullPolicy: IfNotPresent
        # args: []
        ports:
        - name: redis
          containerPort: 6379
