kubernetes/gitlab/redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  labels:
    app: gitlab
    srv: redis-slave
spec:
  type: ClusterIP
  ports:
  - name: redis
    port: 6379
    targetPort: redis
  selector:
    app: gitlab
    srv: redis-slave

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-slave
spec:
  selector:
    matchLabels:
      app: gitlab
      srv: redis-slave
  replicas: 3
  template:
    metadata:
      labels:
        app: gitlab
        srv: redis-slave
    spec:
      restartPolicy: Always
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      containers:
      - name: redis-slave
        image: "bitnami/redis:4.0.10"
        imagePullPolicy: IfNotPresent
        # args: []
        ports:
        - name: redis
          containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-metrics
  labels:
    app: gitlab
    srv: redis-metrics
spec:
  type: ClusterIP
  ports:
  - name: metrics
    port: 9121
    targetPort: metrics
  selector:
    app: gitlab
    srv: redis-metrics

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-metrics
spec:
  selector:
    matchLabels:
      app: gitlab
      srv: redis-metrics
  template:
    metadata:
      labels:
        app: gitlab
        srv: redis-metrics
    spec:
      containers:
      - name: redis-metrics
        image: "oliver006/redis_exporter:v0.19.1"
        imagePullPolicy: IfNotPresent
        ports:
        - name: metrics
          containerPort: 9121

---
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:
    app: gitlab
    srv: redis-master
spec:
  type: ClusterIP
  ports:
  - name: redis
    port: 6379
    targetPort: redis
  selector:
    app: gitlab
    srv: redis-master

---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: redis-master
spec:
  selector:
    matchLabels:
      app: gitlab
      srv: redis-master
  serviceName: redis-master
  template:
    metadata:
      labels:
        app: gitlab
        srv: redis-master
    spec:
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      containers:
      - name: redis
        image: "bitnami/redis:4.0.10"
        imagePullPolicy: IfNotPresent
        args: []
        ports:
        - name: redis
          containerPort: 6379
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
          exec:
            command: ["redis-cli", "ping"]
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 5
          exec:
            command: ["redis-cli", "ping"]
        volumeMounts:
        - name: redis-vol-data
          mountPath: /bitnami/redis/data
  volumeClaimTemplates:
    - metadata:
        name: redis-vol-data
        labels:
          app: gitlab
          srv: redis-master
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
  updateStrategy:
    type: OnDelete
