kubernetes/gitlab/gitlab.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  labels:
    app: gitlab
    srv: main
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  # - name: https
  #   port: 443
  #   targetPort: https
  selector:
    app: gitlab
    srv: main

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-ingress
  labels:
    app: gitlab
    srv: main
spec:
  rules:
  - host: gitlab.sp0ck.io
    http:
      paths:
      - backend:
          serviceName: gitlab
          servicePort: 80

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitlab
  labels:
    app: gitlab
    srv: main
spec:
  selector:
    matchLabels:
      app: gitlab
      srv: main
  replicas: 1
  serviceName: gitlab
  template:
    metadata:
      labels:
        app: gitlab
        srv: main
    spec:
      containers:
      - name: gitlab
        image: "gitlab/gitlab-ce:10.8.4-ce.0"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          ## - name: https
          ## - containerPort: 443
        livenessProbe:
          httpGet:
            path: /help
            port: 80
          initialDelaySeconds: 180
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /help
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: gitlab-vol-etc
          mountPath: /etc/gitlab
        - name: gitlab-vol-data
          mountPath: /gitlab-data
        resources:
          requests:
            memory: 1Gi
            cpu: 500m
          limits:
            memory: 2Gi
            cpu: 1
  volumeClaimTemplates:
  - metadata:
      name: gitlab-vol-data
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
  - metadata:
      name: gitlab-vol-etc
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
